--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             }
             
             .modal-content img {
-                width: 40%;
+                width: 300px;
                 height: auto;
                 border-radius: 8px;
                 box-shadow: 0 0 20px rgba(0,0,0,0.5);
